Fixed styling on sermon cards and small groups cards. Fixed meta info on Small Groups page

--- a/pages/main-styles.scss
+++ b/pages/main-styles.scss
@@ -446,7 +446,7 @@ footer {
     list-style: none;
     margin-top: 50px;
     li {
-      padding: 4px 15px;
+      padding: 4px 10px;
     }
     .previous .paginationDisabled {
       color: #f2f2f2;
@@ -510,7 +510,7 @@ footer {
     list-style: none;
     margin-top: 50px;
     li {
-      padding: 4px 15px;
+      padding: 4px 10px;
     }
     .previous .paginationDisabled {
       color: #f2f2f2;
@@ -819,8 +819,10 @@ footer {
       }
     }
   }
-  .sermon-page-container .card {
-    margin-bottom: 0px 20px 20px 10px;
+  .sermon-page-container {
+    .card {
+      margin: 0px 0px 20px 0px;
+    }
   }
   .sermon-details-container {
     flex-direction: column;
@@ -867,6 +869,12 @@ footer {
     }
   }
   .small-groups-page-container {
+    .paginationBtns {
+      justify-content: center;
+    }
     margin: 0;
+    .card {
+      margin: 0px 0px 20px 0px;
+    }
   }
 }
